--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work7">
-                        <img src="/images/portfolio/work7.jpg" alt="Mock-up Kenya_burned logo" width="100%">
+                        <img src="./images/portfolio/work7.jpg" alt="Mock-up Kenya_burned logo" width="100%">
                         <div class="Hover">
                             <p id=Hover_designKenya>Mock-up Kenya_burned logo</p>
                         </div>
@@ -169,7 +169,7 @@
                 <a href="#"><img src="./images/social icons/you_tube.png" alt=""></a>
                 <a href="#"><img src="./images/social icons/stumble_upon.png" alt=""></a>
                 <h2>DELANI STUDIO</h2>
-                <p>2020</p>
+                <p>2022</p>
             </footer>
         </div>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"
