--- a/index.html
+++ b/index.html
@@ -86,25 +86,25 @@
                     <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work1">
                         <img src="./images/portfolio/work1.jpg" alt="Weather information image" width="100%">
                         <div class="Hover">
-                            <p id=Hover_designKenya>Weather Information</p>
+                            <p class="Hover_designKenya">Weather Information</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work2">
                         <img src="./images/portfolio/work2.jpg" alt="Design Kenya image" width="100%">
                         <div class="Hover">
-                            <p id=Hover_designKenya>Design Kenya Pyramids</p>
+                            <p class="Hover_designKenya">Design Kenya Pyramids</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work3">
                         <img src="./images/portfolio/work3.jpg" alt="Ontario Security image" width="100%">
                         <div class="Hover">
-                            <p id=Hover_designKenya>Ontario Security</p>
+                            <p class="Hover_designKenya">Ontario Security</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images " id="work4">
                         <img src="./images/portfolio/work4.jpg" alt="Design image" width="100%">
                         <div class="Hover">
-                            <p id=Hover_designKenya>Design Kenya</p>
+                            <p class="Hover_designKenya">Design Kenya</p>
                         </div>
                     </div>
                 </div>
@@ -112,25 +112,25 @@
                     <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work5">
                         <img src="./images/portfolio/work5.jpg" alt="Let's chat image" width="100%">
                         <div class="Hover">
-                            <p id=Hover_designKenya>Lets Chat</p>
+                            <p class="Hover_designKenya">Lets Chat</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work6">
                         <img src="./images/portfolio/work6.jpg" alt="Mobile App buttons image" width="100%">
                         <div class="Hover">
-                            <p id=Hover_designKenya>Mobile App buttons</p>
+                            <p class="Hover_designKenya">Mobile App buttons</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work7">
                         <img src="./images/portfolio/work7.jpg" alt="Mock-up Kenya_burned logo" width="100%">
                         <div class="Hover">
-                            <p id=Hover_designKenya>Mock-up Kenya_burned logo</p>
+                            <p class="Hover_designKenya">Mock-up Kenya_burned logo</p>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-3 custom-info-on-portfolio-images" id="work8">
                         <img src="./images/portfolio/work8.jpg" alt="Giraffe restaurant" width="100%">
                         <div class="Hover">
-                            <p id=Hover_designKenya>Giraffe restaurant</p>
+                            <p class="Hover_designKenya">Giraffe restaurant</p>
                         </div>
                     </div>
                 </div>
